codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__chat_with_styled_error.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌ Chat ────────────────────────────────────────────────────────────────────────┐"
"│System: Welcome to Codex DashFlow. Using OPENAI_API_KEY from environment.     │"
"│✗ Error: Network connection failed                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
