codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__full_ui_initial_state.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"        Codex DashFlow - test-session-12345 @ ~/codex_dashflow/crates/tui       "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"┌ Chat ────────────────────────────────────────────────────────────────────────┐"
"│System: Welcome to Codex DashFlow. Using OPENAI_API_KEY from environment.     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input [Ctrl+Enter:send Enter:newline Esc:normal] ────────────────────────────┐"
"│Type a message... (/ for commands, Ctrl+Enter to send)                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" INSERT  Turn: 0 | Model: gpt-4o-mini | ~3/128k (0%) | Env | Auto               "
