codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__header_custom_working_dir.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"                  Codex DashFlow - test-session @ /tmp/project                  "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
